[package]
name = "arithmos"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"

[dependencies]

[dev-dependencies]
criterion = "0.8.2"
proptest = "1.11.0"

[lints.clippy]
nursery = "deny"
pedantic = "deny"
perf = "deny"

[[bench]]
harness = false
name = "benchmark"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"

[profile.dev.package."*"]
opt-level = 2
